--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Home - STP Archery</title>
-      <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 </head>
 <body>
@@ -15,9 +14,8 @@
             <h1>Straight to the Point Archery</h1>
         </header>
     </div>
-    </section>
-    <section class="section group">
-
+</section>
+<section class="section group">
     <div class="col span_4_of_4"> 
         <nav class="nav">
             <ul>
@@ -30,31 +28,37 @@
     </div>      
 </section>
 <section class="section group">    
-  <section class="col span_4_of_4">
-    <img src="images/students-competing.jpg" alt="Students Competing">    
-    <h2>STP Archery</h2>
-    <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-    <p><a href="about.html">Learn more</a></p>
-  </section>
+    <section class="col span_4_of_4 img-container">
+        <div class="intro">    
+            <h2>Straight to the Point Archery</h2>
+            <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+            <p><a href="about.html">Learn more</a></p>
+        </div>
     </section>
-    <section class="section group">  
-  <section class="col span_2_of_4">
-    <h2>Classes</h2>
-    <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
-    <p><a href="about.html">Learn more</a></p>
-  </section>
-  <section  class="col span_2_of_4">
-    <h2>Private Lessons</h2>
-    <p>One-on-one expert guidance by USA Archery certified coach.</p>
-    <p><a href="about.html">Learn more</a></p>
-  </section>
- <section class="section group">      
-  <section class="col span_4_of_4">
-    <h3>Nondiscriminatory Policy:</h3>
-    <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
+</section>
+<section class="section group">  
+    <section class="col span_2_of_4">
+        <h2>Classes</h2>
+        <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
+        <p><a href="about.html">Learn more</a></p>
+    </section>
+    <section class="col span_1_of_4">
+        <h2>Private Lessons</h2>
+        <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
+        <p><a href="about.html">Learn more</a></p>
+    </section>
+    <aside class="col span_1_of_4">
+        <h3>Archery Training Video</h3>
+        <iframe width="270" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <p>What not to do: <em>Archery training fail.</em></p>
+    </aside>
+</section>
+<section class="section group">      
+    <section class="col span_4_of_4">
+        <h3>Nondiscriminatory Policy:</h3>
+        <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
   </section> 
-    </section>
-    </section>
+</section>
   <footer>
     <!-- footer with copyright info & contact email -->
       <h4>Contact Us!</h4>
