--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Home - STP Archery</title>
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
+  <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
+
 </head>
 <body>
 <section class="section group">
@@ -15,8 +17,6 @@
         </header>
     </div>
 </section>
-<section class="section group">
-    <div class="col span_4_of_4"> 
         <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,27 +25,25 @@
                 <li><a href="instructors.html">Instructors</a></li>
             </ul>
         </nav>
-    </div>      
-</section>
 <section class="section group">    
     <section class="col span_4_of_4 img-container">
         <div class="intro">    
             <h2>Straight to the Point Archery</h2>
             <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-            <p><a href="about.html">Learn more</a></p>
+            <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
         </div>
     </section>
 </section>
-<section class="section group">  
+<section class="section group lessons">  
     <section class="col span_2_of_4">
         <h2>Classes</h2>
         <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
-        <p><a href="about.html">Learn more</a></p>
+        <p><a href="about.html"><button>Learn more</button></a></p>
     </section>
     <section class="col span_1_of_4">
         <h2>Private Lessons</h2>
         <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
-        <p><a href="about.html">Learn more</a></p>
+        <p><a href="about.html"><button>Learn more</button></a></p>
     </section>
     <aside class="col span_1_of_4">
         <h3>Archery Training Video</h3>
@@ -54,7 +52,7 @@
     </aside>
 </section>
 <section class="section group">      
-    <section class="col span_4_of_4">
+    <section class="col span_4_of_4 policy">
         <h3>Nondiscriminatory Policy:</h3>
         <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
   </section> 
