--- a/index.html
+++ b/index.html
@@ -1,67 +1,65 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Straight to the Point Archery</title>
-  <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Slabo+27px" rel="stylesheet">
-  <link rel="stylesheet" href="styles/stylesheet.css">
+
+  <title>Home - STP Archery</title>
+      <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <!-- Logo and navigation-->
-    <img src="images/logo.jpg" alt="logo">
-    <h1 class=header>Straight to the Point Archery</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="instructors.html">Instuctors</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section class="header">
-    <h2>Introduction</h2>
-    <img src="images/students-competing.jpg" alt="students competing">
-    <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-    <p><a href="about.html">More >>></a></p>
-  </section>
-  
-  <section class="module">
-    <h3>Classes</h3>
-    <p>Learn more about our latest Class offerings.</p>
-    <p><a href="services.html#classes">More Information >>></a></p>
-    
-  </section>
-  
-  <section class="module">
-    <h3>Private Lessons</h3>
-    <p>Learn more about our latest Private Class offerings.</p>
-    <p><a href="services.html#lessons">More Information >>></a></p>
-  </section>
-  
-<!-- Removed class section and just made it Classes and Lessons
-  <section class="module">
-    <h3>AA103 Advanced Archery</h3>
-    <p>After taking the A101, A102 classes, students are eligible to participate in the A103 class. </p>
-  </section>
-  
--->
-  <section class="policy">
-    <h3>Nondiscriminatory Policy:</h3>
-    <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community. </p>
-  </section>
-  
-  <footer>
-        <!-- footer with copyrite info & contact email -->
-        <nav class= "footer-nav">
-          <h4>Contact Us!</h4>
-          <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
-<!--          Google Map-->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-          
-          <h5>&copy;STP Archery 2017. All rights reserved</h5>
+<section class="section group">
+    <div class="col span_4_of_4">
+        <header>
+            <img src="images/logo.jpg" alt="STP Archery Logo">
+            <h1>Straight to the Point Archery</h1>
+        </header>
+    </div>
+    </section>
+    <section class="section group">
+
+    <div class="col span_4_of_4"> 
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="instructors.html">Instructors</a></li>
+            </ul>
         </nav>
+    </div>      
+</section>
+<section class="section group">    
+  <section class="col span_4_of_4">
+    <img src="images/students-competing.jpg" alt="Students Competing">    
+    <h2>STP Archery</h2>
+    <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+    <p><a href="about.html">Learn more</a></p>
+  </section>
+    </section>
+    <section class="section group">  
+  <section class="col span_3_of_4">
+    <h2>Classes</h2>
+    <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
+    <p><a href="about.html">Learn more</a></p>
+  </section>
+  <section  class="col span_1_of_4">
+    <h2>Private Lessons</h2>
+    <p>One-on-one expert guidance by USA Archery certified coach.</p>
+    <p><a href="about.html">Learn more</a></p>
+  </section>
+ <section class="section group">      
+  <section class="col span_4_of_4">
+    <h3>Nondiscriminatory Policy:</h3>
+    <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
+  </section> 
+    </section>
+    </section>
+  <footer>
+    <!-- footer with copyright info & contact email -->
+      <h4>Contact Us!</h4>
+      <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+       <h5>&copy;STP Archery 2017. All rights reserved</h5>
   </footer>
 </body>
 </html>
