--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Home - STP Archery</title>
+  <!-- STP Archery Logo within the header -->
+  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" /> 
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
+  <!-- Google Font Cutive for titles and Montserrat or Open Sans for body text -->
+  <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
 <body>
@@ -30,7 +33,7 @@
   <div class="section group">    
     <section class="col span_4_of_4 img-container">
       <div class="intro">    
-        <h2>Straight to the Point Archery</h2>
+        <h2>Home</h2>
         <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
         <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
       </div>
@@ -70,9 +73,16 @@
   </div>
   <!-- footer with copyright info & contact email -->
   <footer>
-      <h4>Contact Us!</h4>
+    <!-- footer with copyrite info & contact email -->
+    <nav class= "footer-nav">
+        <h4>Contact Us!</h4>
       <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+      <!--Google Map-->
+      <div class=mapWrapper>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" allowfullscreen></iframe>
+        </div>
       <h5>&copy;STP Archery 2017. All rights reserved</h5>
+    </nav>
   </footer>
 </body>
 </html>
