--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="intro">    
         <h2>Home</h2>
         <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-        <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+        <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
       </div>
     </section>
   </div>
