--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
   <div class="section group">    
     <section class="col span_4_of_4 img-container">
       <div class="intro">    
-        <h2>Home</h2>
+        <h2>About</h2>
         <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-        <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+        <p><a href="services.html">Classes and Lessons <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
       </div>
     </section>
   </div>
   <!-- Content/Media Section this page only -->
   <section class="section group">  
-    <div class="col span_1_of_3 lessons">
+    <div class="col span_2_of_4 lessons">
       <h2>Classes</h2>
       <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
       <ul>
@@ -54,13 +54,13 @@
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
     </div>
     
-    <div class="col span_1_of_3 lessons">
+    <div class="col span_1_of_4 lessons">
       <h2>Private Lessons</h2>
       <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
     </div>
-   
-    <div class="col span_1_of_3 lessons">
+  
+    <div class="col span_1_of_4 lessons">
       <h4>Training/Competition Video</h4>
       <iframe width="100%" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
       <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
