--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
     </section>
-    <aside class="col span_1_of_4">
-      <h4>Training/Competition Video</h4>
+    <section class="aside col span_1_of_4">
+      <h4>Training / Competition Video</h4>
       <iframe width="100%" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
       <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
-    </aside>
+    </section>
   </div>
   <!-- Policy Note, for all pages -->   
   <div class="section group">  
