--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!-- STP Archery Logo within the header -->
   <link rel="shortcut icon" href="images/logosm.png" type="image/x-icon" /> 
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
+
   <!-- Google Font Cutive for titles and Montserrat or Open Sans for body text -->
   <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
@@ -44,6 +45,7 @@
     <section class="col span_2_of_4">
       <h2>Classes</h2>
       <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
+  
       <ul>
         <li>A101 Beginners</li>
         <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i></li>
@@ -58,11 +60,11 @@
       <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
     </section>
-    <aside class="col span_1_of_4">
-      <h4>Training/Competition Video</h4>
+    <section class="aside col span_1_of_4">
+      <h4>Training / Competition Video</h4>
       <iframe width="100%" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
       <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
-    </aside>
+    </section>
   </div>
   <!-- Policy Note, for all pages -->   
   <div class="section group">  
